--- a/website.html
+++ b/website.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sunshine School</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
 
     <!-- Header Section -->
     <header>
         <div class="top-header">
-            Sunshine School - A Place for Bright Futures
+            Welcome to Sunshine School - A Place for Bright Futures
         </div>
     </header>
 
@@ -33,28 +33,34 @@
     </section>
 
     <!-- Motivational Quote and Forms Section -->
-    <section class="quote-section">
-        <div class="quote-content">
-            <blockquote>
-                "Education is the most powerful weapon which you can use to change the world."
-            </blockquote>
-            <div class="buttons">
+    
+<section class="quote-section">
+    <div class="quote-content">
+        <blockquote>
+            "Education is the most powerful weapon which you can use to change the world."
+        </blockquote>
+        <div class="buttons">
+            <div class="button-box">
                 <a href="#apply" class="apply-button">Apply Now</a>
-                <a href="#courses" class="courses-button">Courses</a>
+            </div>
+            <div class="button-box">
+                <a href="#courses" class="courses-button">View Courses</a>
             </div>
         </div>
-    </section>
+    </div>
+</section>
+
 
     <!-- School Images Section -->
     <section class="images-section">
         <div class="image">
-            <img src="school1.jpg" alt="School Image 1">
+            <img src="student1.jpg" alt="School Image 1">
         </div>
         <div class="image">
-            <img src="school2.jpg" alt="School Image 2">
+            <img src="student2.jpeg" alt="School Image 2">
         </div>
         <div class="image">
-            <img src="school3.jpg" alt="School Image 3">
+            <img src="student3.jpeg" alt="School Image 3">
         </div>
     </section>
 
