--- a/website.html
+++ b/website.html
@@ -63,6 +63,7 @@
             <img src="student3.jpeg" alt="School Image 3">
         </div>
     </section>
+    <script src="login.js"></script>
 
 </body>
 </html>
